# stackql-deploy-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  crates.js  help.html  settings.html  src-files.js
.claude/: settings.local.json
.github/: release-footer.md
.github/workflows/: ci-rust.yml  ci-website.yml  ci.yml  deploy-action.yml  deploy-get-app.yml  release-build.yml  release.yml  test-demo.yml
docs/: flows.md
get-app/: main.ts
search.index/: 00e94b0bf5d3.js  00fd5bdbe09f.js  010a3a4bb8a6.js  014530a968c7.js  020cb7dd8032.js  036c67867e0f.js  03d1345da0ab.js  03f521c63123.js  047a4bfa9418.js  04c96b11c410.js  054d1e0cdda6.js  056cb06e3c93.js  058b9eaa81ad.js  061d8751d0dc.js  065f80bfd792.js  069305965fc3.js  06cdb5c31507.js  07c5c88ac839.js  07f426dcdac5.js  09c94e1fd823.js  09fcf358aaa6.js  0a57d0828502.js  0a5af3bc61aa.js  0a9758762485.js  0a9a61791329.js  0ac7dc207540.js  0b0f8dcf5b01.js  0b4bdb933228.js  0b5cfe4ea988.js  0baeeadf1693.js  0bb4479f6a68.js  0c3c64db90c5.js  0d17c56caad7.js  0d8e63aa2f45.js  0dcd86883ee1.js  0dfe5b630bee.js  0eddc8270593.js  0f492c293486.js  0f5a45abee0d.js  0fd31df462f2.js  (+268 more)
search.index/crateNames/: 2fcd5c65391c.js
search.index/desc/: 0618101bf7e3.js  27966ef37822.js  d4076d5f0f2b.js  d4e054082fd3.js
search.index/entry/: 811f8678bbb3.js  d77384228514.js  f4ebd03e6f82.js  f91d6836254d.js
search.index/function/: 06498e5fde54.js  1d691871f4e5.js  2597ab8dfed1.js  7b05f25243df.js
search.index/generic_inverted_index/: 3ef9635d9be9.js  80d58c42d729.js  d07ea5b68f54.js
search.index/name/: 120f1d15f65d.js  2d84b9545d7b.js  4d9639296265.js  df9907c3cfc8.js
search.index/path/: 32266c6af87b.js  (+1 more)
src/: app.rs  globals.rs  main.rs
stackql_deploy/: all.html  fn.main.html  index.html  macro.print_error!.html  macro.print_error.html  macro.print_info.html  macro.print_success!.html  macro.print_success.html  sidebar-items.js
tests/: pgwire_replace_test.rs
website/: docusaurus.config.js  package.json  sidebars.js
(+542 files in other folders)
