[package]
name = "stackql-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
rustyline = "10.0"
tera = "1.19.0"
log = "0.4"
env_logger = "0.10"
pgwire-lite = "0.1.0"
zip = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
unicode-width = "0.1.10"
once_cell = "1.17.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
dotenvy = "0.15"
regex = "1.10"

[dev-dependencies]
tempfile = "3"
