[package]
name = "stackql-deploy"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
description = "Infrastructure-as-code framework for declarative cloud resource management using StackQL"
authors = ["StackQL Studios <info@stackql.io>"]
license = "MIT"
homepage = "https://stackql.io"
repository = "https://github.com/stackql/stackql-deploy"
keywords = ["stackql", "infrastructure", "iac", "cloud", "devops"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# docs.rs: this is a binary-only crate — no public library API to document.
# The README (above) is what crates.io renders on the package page.
[package.metadata.docs.rs]
no-default-features = true

[dependencies]
clap = { version = "4.3", features = ["derive"] }
colored = "2.0"
rustyline = "10.0"
tera = "1.19.0"
log = "0.4"
env_logger = "0.10"
pgwire-lite = "0.1.0"
zip = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
indicatif = "0.17"
unicode-width = "0.1.10"
once_cell = "1.17.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
dotenvy = "0.15"
regex = "1.10"

[dev-dependencies]
tempfile = "3"
